--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "postinstall": "npm rebuild bcrypt"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +19,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^3.6.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.14"
   }
 }
